{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 278,
  "lineage": "f5ae9444-19c1-689e-e911-16a92b5ed699",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:943418191780:loadbalancer/app/coding-cloud-lb/95c6cebbe785a03c",
            "arn_suffix": "app/coding-cloud-lb/95c6cebbe785a03c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "coding-cloud-lb-1309965249.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:943418191780:loadbalancer/app/coding-cloud-lb/95c6cebbe785a03c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "coding-cloud-lb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0d6d8ace3c9df73a2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bb9f1b779ade56a3"
              },
              {
                "subnet_id": "subnet-0e512da60b07c1a5d"
              }
            ],
            "subnets": [
              "subnet-0bb9f1b779ade56a3",
              "subnet-0e512da60b07c1a5d"
            ],
            "vpc_id": "vpc-06f93323af272b2b3",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:943418191780:loadbalancer/app/coding-cloud-lb/95c6cebbe785a03c"
          },
          "dependencies": [
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:943418191780:listener/app/coding-cloud-lb/95c6cebbe785a03c/1df6a9d28cab3a1b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:943418191780:targetgroup/coding-cloud-vm-target/0321ab2c5c975782",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:943418191780:listener/app/coding-cloud-lb/95c6cebbe785a03c/1df6a9d28cab3a1b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:943418191780:loadbalancer/app/coding-cloud-lb/95c6cebbe785a03c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:943418191780:listener/app/coding-cloud-lb/95c6cebbe785a03c/1df6a9d28cab3a1b"
          },
          "dependencies": [
            "module.ec2.aws_alb.lb",
            "module.ec2.aws_alb_target_group.lb-target",
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "lb-target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:943418191780:targetgroup/coding-cloud-vm-target/0321ab2c5c975782",
            "arn_suffix": "targetgroup/coding-cloud-vm-target/0321ab2c5c975782",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:943418191780:targetgroup/coding-cloud-vm-target/0321ab2c5c975782",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "coding-cloud-vm-target",
            "port": 31000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06f93323af272b2b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:943418191780:targetgroup/coding-cloud-vm-target/0321ab2c5c975782"
          },
          "dependencies": [
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "vm-target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:943418191780:targetgroup/coding-cloud-vm-target/0321ab2c5c975782-2026050409284516610000000f",
            "port": 31000,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:943418191780:targetgroup/coding-cloud-vm-target/0321ab2c5c975782",
            "target_id": "i-0769f0756d735f11b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_alb_target_group.lb-target",
            "module.ec2.aws_iam_instance_profile.profile",
            "module.ec2.aws_instance.worker",
            "module.ec2.aws_key_pair.key",
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a00cf47dbbc844c",
            "arn": "arn:aws:ec2:ap-south-1:943418191780:instance/i-0cecd883a39ab0783",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cecd883a39ab0783",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "coding-cloud-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f5055a3f4b7d2f6a"
              }
            ],
            "primary_network_interface_id": "eni-0f5055a3f4b7d2f6a",
            "private_dns": "ip-10-0-77-23.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.77.23",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0890f43e282977f97",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab1d00ce2990e429",
            "tags": {
              "Name": "Docker"
            },
            "tags_all": {
              "Name": "Docker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04266cc22d7f99e25"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "i-0cecd883a39ab0783",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key",
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a00cf47dbbc844c",
            "arn": "arn:aws:ec2:ap-south-1:943418191780:instance/i-0e96ac945b850a31a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e96ac945b850a31a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "coding-cloud-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e488380e1b7015b7"
              }
            ],
            "primary_network_interface_id": "eni-0e488380e1b7015b7",
            "private_dns": "ip-10-0-13-72.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.13.72",
            "public_ip": "3.110.86.146",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f92c1ce7ed946ba4",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb9f1b779ade56a3",
            "tags": {
              "Name": "Jenkins"
            },
            "tags_all": {
              "Name": "Jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5e2b3e8c51267a7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "i-0e96ac945b850a31a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key",
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d8b31a89ddaf2cd7",
            "arn": "arn:aws:ec2:ap-south-1:943418191780:instance/i-05bb8d203e4b0e2de",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cluster-instance-profile",
            "id": "i-05bb8d203e4b0e2de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "coding-cloud-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0053114e03fec78ee"
              }
            ],
            "primary_network_interface_id": "eni-0053114e03fec78ee",
            "private_dns": "ip-10-0-73-51.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.73.51",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09593c11f62d74352",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab1d00ce2990e429",
            "tags": {
              "Name": "K8s-Master"
            },
            "tags_all": {
              "Name": "K8s-Master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-090add8482b19138e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "i-05bb8d203e4b0e2de",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.profile",
            "module.ec2.aws_key_pair.key",
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d8b31a89ddaf2cd7",
            "arn": "arn:aws:ec2:ap-south-1:943418191780:instance/i-0769f0756d735f11b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cluster-instance-profile",
            "id": "i-0769f0756d735f11b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "coding-cloud-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bdc3332075baf5f9"
              }
            ],
            "primary_network_interface_id": "eni-0bdc3332075baf5f9",
            "private_dns": "ip-10-0-125-246.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.125.246",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0daaa3a07b19633d9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d9f3ca0e45760474",
            "tags": {
              "Name": "K8s-Worker"
            },
            "tags_all": {
              "Name": "K8s-Worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b7544942a2fa95c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "i-0769f0756d735f11b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.profile",
            "module.ec2.aws_key_pair.key",
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "terra-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fdfd3818d4a7776",
            "arn": "arn:aws:ec2:ap-south-1:943418191780:elastic-ip/eipalloc-09fdfd3818d4a7776",
            "domain": "vpc",
            "id": "eipalloc-09fdfd3818d4a7776",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-205-3-128.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.3.128",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "NAT-EIP"
            },
            "tags_all": {
              "Name": "NAT-EIP"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:internet-gateway/igw-095db98c6dbcfa781",
            "id": "igw-095db98c6dbcfa781",
            "owner_id": "943418191780",
            "region": "ap-south-1",
            "tags": {
              "Name": "Coding-Cloud-IGW"
            },
            "tags_all": {
              "Name": "Coding-Cloud-IGW"
            },
            "vpc_id": "vpc-06f93323af272b2b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terra-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fdfd3818d4a7776",
            "association_id": "eipassoc-0d6eaf3369f96e348",
            "connectivity_type": "public",
            "id": "nat-09a21633df5d7c0f9",
            "network_interface_id": "eni-03a4153690ecd6a3b",
            "private_ip": "10.0.4.236",
            "public_ip": "43.205.3.128",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bb9f1b779ade56a3",
            "tags": {
              "Name": "Coding-Cloud-NAT"
            },
            "tags_all": {
              "Name": "Coding-Cloud-NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "terra-priv-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0eed05eb5b7bdff291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09a21633df5d7c0f9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0eed05eb5b7bdff29",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0eed05eb5b7bdff29"
          },
          "dependencies": [
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "terra-pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-095db98c6dbcfa781",
            "id": "r-rtb-07110dfd0897014fc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-07110dfd0897014fc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-07110dfd0897014fc"
          },
          "dependencies": [
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:route-table/rtb-0eed05eb5b7bdff29",
            "id": "rtb-0eed05eb5b7bdff29",
            "owner_id": "943418191780",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "Coding-Cloud-Private-Table"
            },
            "tags_all": {
              "Name": "Coding-Cloud-Private-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f93323af272b2b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "rtb-0eed05eb5b7bdff29",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:route-table/rtb-07110dfd0897014fc",
            "id": "rtb-07110dfd0897014fc",
            "owner_id": "943418191780",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "Coding-Cloud-Public-Table"
            },
            "tags_all": {
              "Name": "Coding-Cloud-Public-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f93323af272b2b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "rtb-07110dfd0897014fc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-priva-asso-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dafa0f0d99d2cb9a",
            "region": "ap-south-1",
            "route_table_id": "rtb-0eed05eb5b7bdff29",
            "subnet_id": "subnet-0ab1d00ce2990e429"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-priva-asso-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087e6f052e863d4a0",
            "region": "ap-south-1",
            "route_table_id": "rtb-0eed05eb5b7bdff29",
            "subnet_id": "subnet-0d9f3ca0e45760474"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-pub-asso-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfe4553bcfd2f017",
            "region": "ap-south-1",
            "route_table_id": "rtb-07110dfd0897014fc",
            "subnet_id": "subnet-0bb9f1b779ade56a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-pub-asso-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f69bee3732f6cf7",
            "region": "ap-south-1",
            "route_table_id": "rtb-07110dfd0897014fc",
            "subnet_id": "subnet-0e512da60b07c1a5d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group/sg-0d6d8ace3c9df73a2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d6d8ace3c9df73a2",
            "ingress": [],
            "name": "terraform-20260504092616872800000008",
            "name_prefix": "terraform-",
            "owner_id": "943418191780",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-SG"
            },
            "tags_all": {
              "Name": "ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f93323af272b2b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sg-0d6d8ace3c9df73a2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group/sg-04266cc22d7f99e25",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04266cc22d7f99e25",
            "ingress": [],
            "name": "terraform-20260504092616475300000004",
            "name_prefix": "terraform-",
            "owner_id": "943418191780",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Docker-SG"
            },
            "tags_all": {
              "Name": "Docker-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f93323af272b2b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sg-04266cc22d7f99e25",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group/sg-0c5e2b3e8c51267a7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c5e2b3e8c51267a7",
            "ingress": [],
            "name": "terraform-20260504092616857800000007",
            "name_prefix": "terraform-",
            "owner_id": "943418191780",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jenkins-Master-SG"
            },
            "tags_all": {
              "Name": "Jenkins-Master-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f93323af272b2b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sg-0c5e2b3e8c51267a7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-k8s-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group/sg-090add8482b19138e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-090add8482b19138e",
            "ingress": [],
            "name": "terraform-20260504092616476900000005",
            "name_prefix": "terraform-",
            "owner_id": "943418191780",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "K8s-Master-SG"
            },
            "tags_all": {
              "Name": "K8s-Master-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f93323af272b2b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sg-090add8482b19138e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-k8s-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group/sg-06b7544942a2fa95c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06b7544942a2fa95c",
            "ingress": [],
            "name": "terraform-20260504092616476900000006",
            "name_prefix": "terraform-",
            "owner_id": "943418191780",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "K8s-Worker-SG"
            },
            "tags_all": {
              "Name": "K8s-Worker-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f93323af272b2b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sg-06b7544942a2fa95c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group/sg-045ef58b13315ee18",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-045ef58b13315ee18",
            "ingress": [],
            "name": "terraform-20260504092616466000000003",
            "name_prefix": "terraform-",
            "owner_id": "943418191780",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS-SG"
            },
            "tags_all": {
              "Name": "RDS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f93323af272b2b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sg-045ef58b13315ee18",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:subnet/subnet-0bb9f1b779ade56a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb9f1b779ade56a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "943418191780",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Coding-Cloud-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Coding-Cloud-Public-Subnet-1"
            },
            "vpc_id": "vpc-06f93323af272b2b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "subnet-0bb9f1b779ade56a3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:subnet/subnet-0e512da60b07c1a5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e512da60b07c1a5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "943418191780",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Coding-Cloud-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Coding-Cloud-Public-Subnet-2"
            },
            "vpc_id": "vpc-06f93323af272b2b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "subnet-0e512da60b07c1a5d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-sub-priva-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:subnet/subnet-0ab1d00ce2990e429",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab1d00ce2990e429",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "943418191780",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Coding-Cloud-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Coding-Cloud-Private-Subnet-1"
            },
            "vpc_id": "vpc-06f93323af272b2b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "subnet-0ab1d00ce2990e429",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-sub-priva-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:subnet/subnet-0d9f3ca0e45760474",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9f3ca0e45760474",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "943418191780",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Coding-Cloud-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Coding-Cloud-Private-Subnet-2"
            },
            "vpc_id": "vpc-06f93323af272b2b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "subnet-0d9f3ca0e45760474",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:vpc/vpc-06f93323af272b2b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06fba40135795d194",
            "default_route_table_id": "rtb-0c3bfbabf6685785b",
            "default_security_group_id": "sg-0ef9e7083e63f3672",
            "dhcp_options_id": "dopt-078d802ea7a9af455",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06f93323af272b2b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c3bfbabf6685785b",
            "owner_id": "943418191780",
            "region": "ap-south-1",
            "tags": {
              "Name": "Coding-Cloud-VPC"
            },
            "tags_all": {
              "Name": "Coding-Cloud-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "vpc-06f93323af272b2b3",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-alb-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-0e483c8f2bb889a1f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e483c8f2bb889a1f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0d6d8ace3c9df73a2",
            "security_group_rule_id": "sgr-0e483c8f2bb889a1f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-0e483c8f2bb889a1f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-docker-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-095776f71347ba1d5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-095776f71347ba1d5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-04266cc22d7f99e25",
            "security_group_rule_id": "sgr-095776f71347ba1d5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-095776f71347ba1d5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-jenkins-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-02c3cce4baa8dd802",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02c3cce4baa8dd802",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0c5e2b3e8c51267a7",
            "security_group_rule_id": "sgr-02c3cce4baa8dd802",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-02c3cce4baa8dd802",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-master-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-0eef265871a78e1d3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0eef265871a78e1d3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-090add8482b19138e",
            "security_group_rule_id": "sgr-0eef265871a78e1d3",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-0eef265871a78e1d3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-rds-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-0e8296bbd79d62255",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e8296bbd79d62255",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-045ef58b13315ee18",
            "security_group_rule_id": "sgr-0e8296bbd79d62255",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-0e8296bbd79d62255",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-worker-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-094df9e36a5fb48fc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-094df9e36a5fb48fc",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-06b7544942a2fa95c",
            "security_group_rule_id": "sgr-094df9e36a5fb48fc",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-094df9e36a5fb48fc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-alb-ingress-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-07137a32e61fdec2f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-07137a32e61fdec2f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0d6d8ace3c9df73a2",
            "security_group_rule_id": "sgr-07137a32e61fdec2f",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-07137a32e61fdec2f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-docker-ingress-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-02d8270b9fad81cdc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-02d8270b9fad81cdc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-04266cc22d7f99e25",
            "security_group_rule_id": "sgr-02d8270b9fad81cdc",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-02d8270b9fad81cdc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-jenkins-ingress-8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-0c59511e05f4e3f8d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0c59511e05f4e3f8d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0c5e2b3e8c51267a7",
            "security_group_rule_id": "sgr-0c59511e05f4e3f8d",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-0c59511e05f4e3f8d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-jenkins-ingress-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-0a1d031da987c9a30",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0a1d031da987c9a30",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0c5e2b3e8c51267a7",
            "security_group_rule_id": "sgr-0a1d031da987c9a30",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-0a1d031da987c9a30",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-master-ingress-179",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-076201bde89f30f2b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 179,
            "id": "sgr-076201bde89f30f2b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-090add8482b19138e",
            "security_group_rule_id": "sgr-076201bde89f30f2b",
            "tags": null,
            "tags_all": {},
            "to_port": 179
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-076201bde89f30f2b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-master-ingress-6443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-0a9f46c6b72b059a0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-0a9f46c6b72b059a0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-090add8482b19138e",
            "security_group_rule_id": "sgr-0a9f46c6b72b059a0",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-0a9f46c6b72b059a0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-master-ingress-all-from-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-02c762400b6830937",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02c762400b6830937",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-06b7544942a2fa95c",
            "region": "ap-south-1",
            "security_group_id": "sg-090add8482b19138e",
            "security_group_rule_id": "sgr-02c762400b6830937",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-02c762400b6830937",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-master-ingress-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-07e04bf39ab8d997f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-07e04bf39ab8d997f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-090add8482b19138e",
            "security_group_rule_id": "sgr-07e04bf39ab8d997f",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-07e04bf39ab8d997f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-rds-ingress-3306",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-0764377dfe960d641",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0764377dfe960d641",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-045ef58b13315ee18",
            "security_group_rule_id": "sgr-0764377dfe960d641",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-0764377dfe960d641",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-worker-ingress-10250",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-011cbe0219ba80004",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 10250,
            "id": "sgr-011cbe0219ba80004",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-06b7544942a2fa95c",
            "security_group_rule_id": "sgr-011cbe0219ba80004",
            "tags": null,
            "tags_all": {},
            "to_port": 10250
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-011cbe0219ba80004",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-worker-ingress-179",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-00f08005a8720c391",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 179,
            "id": "sgr-00f08005a8720c391",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-06b7544942a2fa95c",
            "security_group_rule_id": "sgr-00f08005a8720c391",
            "tags": null,
            "tags_all": {},
            "to_port": 179
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-00f08005a8720c391",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-worker-ingress-31000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-0879dfaa4cfdcf3ff",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 31000,
            "id": "sgr-0879dfaa4cfdcf3ff",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-06b7544942a2fa95c",
            "security_group_rule_id": "sgr-0879dfaa4cfdcf3ff",
            "tags": null,
            "tags_all": {},
            "to_port": 31000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-0879dfaa4cfdcf3ff",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-worker-ingress-all-from-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-02e22910a9505d4c5",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02e22910a9505d4c5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-090add8482b19138e",
            "region": "ap-south-1",
            "security_group_id": "sg-06b7544942a2fa95c",
            "security_group_rule_id": "sgr-02e22910a9505d4c5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-02e22910a9505d4c5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-worker-ingress-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:943418191780:security-group-rule/sgr-0d8f40de5202cadf0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0d8f40de5202cadf0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-06b7544942a2fa95c",
            "security_group_rule_id": "sgr-0d8f40de5202cadf0",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "943418191780",
            "id": "sgr-0d8f40de5202cadf0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    }
  ]
}